--- a/SurveyEducation/Areas/Admin/Views/Survey/ShowResultUser.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Survey/ShowResultUser.cshtml
@@ -67,7 +67,7 @@
                                                 {
                                                     if (string.Equals(rs.QuestionId, question.Id))
                                                     {
-                                                        <input class="form-control" value="@rs.Answer" />
+                                                        <input class="form-control" value="@rs.Answer" disabled />
                                                     }
                                                 }
                                             }
@@ -113,22 +113,24 @@
                                                         if (string.Equals(result, answer))
                                                         {
                                                             <div class="col-md-9 mt-2">
-                                                                <input name="default-radio-input" class="form-check-input" type="radio" checked value="@answer">
+                                                                <input name="default-radio-input" class="form-check-input" type="radio" checked value="@answer" disabled>
                                                                 <label class="form-check-label">@answer</label>
-                                                            </div><div class="col-md-3">
+                                                            </div>
+                                                            @*<div class="col-md-3">
                                                                 <a href=""><span id="btn-edit-answer" class="tf-icons bx bx-edit" style="color: blue"></span></a>
                                                                 <a href=""><span class="tf-icons bx bx-trash" style="color: red"></span></a>
-                                                            </div>
+                                                            </div>*@
                                                         }
                                                         else
                                                         {
                                                             <div class="col-md-9 mt-2">
-                                                                <input name="default-radio-input" class="form-check-input" type="radio" value="@answer">
+                                                                <input name="default-radio-input" class="form-check-input" type="radio" value="@answer" disabled>
                                                                 <label class="form-check-label">@answer</label>
-                                                            </div><div class="col-md-3">
+                                                            </div>
+                                                            @*<div class="col-md-3">
                                                                 <a href=""><span id="btn-edit-answer" class="tf-icons bx bx-edit" style="color: blue"></span></a>
                                                                 <a href=""><span class="tf-icons bx bx-trash" style="color: red"></span></a>
-                                                            </div>
+                                                            </div>*@
                                                         }
 
 
@@ -160,7 +162,7 @@
                                             <div class="form-check">
                                                 <div class="row">
                                                     @{
-                                                        var questions = question.Answers.Split('|');
+                                                        List<String> questions = question.Answers.Split('|').ToList();
                                                         List<string> results = null;
                                                         foreach (var answer in Model.Answers)
                                                         {
@@ -170,26 +172,40 @@
                                                             }
                                                         }
 
+                                                        List<String> resultsNoChecked = null;
+                                                        for (int i = 0; i < questions.Count; i++)
+                                                        {
+                                                            for (int j = 0; j < results.Count; j++)
+                                                            {
+                                                                if (questions[i].Equals(results[j]))
+                                                                {
+                                                                    questions.RemoveAt(i);
+                                                                }
+                                                            }
+                                                        }
+                                                    }
+                                                    @foreach (var r in results)
+                                                    {
+                                                        <div class="col-md-9 mt-2">
+                                                            <input class="form-check-input" type="checkbox" checked value="@r" disabled>
+                                                            <label class="form-check-label"> @r</label>
+                                                        </div>
+                                                        @*<div class="col-md-3">
+                                                            <a href=""><span class="tf-icons bx bx-edit" style="color: blue"></span></a>
+                                                            <a href=""><span class="tf-icons bx bx-trash" style="color: red"></span></a>
+                                                        </div>*@
                                                     }
                                                     @foreach (var a in questions)
                                                     {
-                                                        foreach (var r in results)
-                                                        {
-                                                            if (string.Equals(a, r))
-                                                            {
-                                                                <div class="col-md-9 mt-2">
-                                                                    <input class="form-check-input" type="checkbox" checked value="@a">
-                                                                    <label class="form-check-label"> @a</label>
-                                                                </div><div class="col-md-3">
-                                                                    <a href=""><span class="tf-icons bx bx-edit" style="color: blue"></span></a>
-                                                                    <a href=""><span class="tf-icons bx bx-trash" style="color: red"></span></a>
-                                                                </div>
-                                                            }
-                                                            
-                                                        }
-
+                                                        <div class="col-md-9 mt-2">
+                                                            <input class="form-check-input" type="checkbox" value="@a" disabled>
+                                                            <label class="form-check-label"> @a</label>
+                                                        </div>
+                                                        @*<div class="col-md-3">
+                                                            <a href=""><span class="tf-icons bx bx-edit" style="color: blue"></span></a>
+                                                            <a href=""><span class="tf-icons bx bx-trash" style="color: red"></span></a>
+                                                        </div>*@
                                                     }
-
                                                 </div>
                                             </div>
                                         </div>
